--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
 
 	<build>
 		<plugins>
@@ -54,7 +55,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	<repositories>
+		<repository>
+			<id>maven-group</id>
+			<url>http://localhost:8081/maven-releases/tn.esprit.spring/</url>
+		</repository>
+	</repositories>
 	
 
 </project>
