--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ server.port=8082
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/timesheet-devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
  BCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=
+ spring.datasource.username=newuser
+ spring.datasource.password=password
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
