--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.mvc.servlet.path=/servlet
 # 8082 : proejt timesheet-ci 
 # 8083 : jenkins 
 # 9000 : sonar 
-server.port=3000
+server.port=8084
  
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/timesheet-devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
- spring.datasource.username=newuser
- spring.datasource.password=password
+ spring.datasource.username=root
+ spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
