--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,18 +14,21 @@ server.port=8084
  
 ### DATABASE ###
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/timesheet-devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
- spring.datasource.username=newuser
- spring.datasource.password=password
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.datasource.url=jdbc:mariadb://mysql-atef.alwaysdata.net:3306/atef_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+ spring.datasource.username=atef
+ spring.datasource.password=Kiratroyass1
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+
  
 #logging configuration
-logging.file.name=C:\\logs\\timesheet-devops.log
+logging.file.name=logs\\timesheet-devops.log
 logging.level.com.zaxxer.hikari=warn
 logging.level.org.springframework=warn 
 logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
- 
